--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+      - name: Container start
+        uses: hoverkraft-tech/compose-action@v2.0.1
+      - name: Waiting for сontainer start
+        run: sleep 30
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Start SUT
